objects/PC_Region__c.object
<CustomObject>
    <description>Region is a custom object in Patient Connect that represents the details of a region.</description>
    <fields>
        <fullName>PC_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the region is active or not.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_EffectiveFromTime__c</fullName>
        <description>Date from which the region is active or inactive.</description>
        <label>Effective From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PC_EffectiveToTime__c</fullName>
        <description>End date time till which the region is active or inactive.</description>
        <label>Effective To</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PC_Manufacturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Record Id of the associated manufacturer.</description>
        <label>Manufacturer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Regions</relationshipLabel>
        <relationshipName>Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Region</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PC_Manufacturer__c</columns>
        <columns>PC_EffectiveFromTime__c</columns>
        <columns>PC_EffectiveToTime__c</columns>
        <columns>PC_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>